--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^4.1.18",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.23",
+        "chart.js": "^4.5.1",
+        "lucide-vue-next": "^0.562.0",
+        "postcss": "^8.5.6"
     }
 }
